# mimir

./: .env.example  .gitignore  .mailmap  .pr104.diff  .review104.md  BIND_MOUNT_HEALTH_PROBE.md  CHANGELOG.md  CLAUDE_SDK_CLIENT_MIGRATION.md  CODE_REVIEW_BACKLOG.md  CONTRIBUTING.md  DEEPAGENTS_MIGRATION_ANALYSIS.md  Dockerfile  FEEDBACK-LOOPS.md  FUTURE_WORK.md  LICENSE  MIMIR_HOME_GIT_TRACKING.md  README.md  SECURITY.md  SPEC.md  SYNTHESIS_AND_BUDGET_FIXES.md  V0.4.md  V0.5.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
docker/: README.md
docs/: admin-config-ui.md  authorization.md  code-review-2026-05-09.md  configuration.md  credentials.md  graceful-restart.md  memory-doctor.md  mimir-nondocker-guide.md  react-dashboard-extensions.md  react-dashboard-ui.md  react-frontend-cutover.md  recent-activity-context.md  skill-as-tool-architecture.md  skills-architecture-restoration.md  synthesis-prompt-saga-store-step.md  systemd.md  watchdog.md  web-ui-auth.md  worklink-smoke.md
evals/: __init__.py
frontend/: index.html
mimir/: __init__.py  _atomic.py  _context.py  _deepagents_subagent_auth.py  _deepagents_summarization.py  _jsonl_tail.py  _langchain_claude_code_patches.py  _langchain_codex_plus_patches.py  _llm_retry.py  _locks.py  _paths.py  _skills_filter_middleware.py  _streaming_dispatch.py  _think_blocks.py  _tool_helpers.py  access_control.py  admin_config.py  admin_users.py  agent.py  background_tasks.py  billing.py  budget.py  chainlink_board.py  chainlink_bootstrap.py  channel_registry.py  channeltools.py  chat_skills.py  cli.py  codex_auth.py  colbert.py  committools.py  config.py  core_blocks.py  core_memory_pr.py  cred_rotate.py  cred_verify.py  credentials.yaml  dashboard_extensions.py  defaults_upgrade.py  dispatcher.py  (+110 more)
saga/: BENCHMARK-RESULTS.md  BENCHMARKS.md  CONTROL-FLOW.md  HINDSIGHT-IDEAS.md  LICENSE  NEXT-EXPERIMENTS.md  README.md  SPEC.md  msam.example.toml  pyproject.toml  saga.example.toml
saga/msam/: __init__.py  agents.py  annotate.py  api.py  calibration.py  config.py  consolidation.py  core.py  decay.py  embeddings.py  entity_roles.py  forgetting.py  init_db.py  metrics.py  prediction.py  remember.py  retrieval_v2.py  server.py  subatom.py  triples.py  vector_index.py
saga/msam/benchmarks/: benchmark.py  run.py  synthetic_dataset.py
saga/msam/benchmarks/longmemeval/: config.py  harness.py  ingest.py  msam_bench.toml  msam_bench_p34.toml  msam_bench_p36.toml  p33_threshold_analysis.py  p34_threshold_analysis.py  probe_preference.py  run_eval.py
saga/msam/examples/: agent_integration.py  quickstart.py  synthetic_dataset.py
saga/msam/tests/: test_agents.py  test_agreement.py  test_annotate.py  test_calibration.py  test_cherry_picks.py  test_cli.py  test_cli_commands.py  test_config.py  test_consolidation.py  test_contradictions.py  test_core.py  test_core_functions.py  test_decay.py  test_embeddings.py  test_entity_roles.py  test_forgetting.py  test_metrics.py  test_observations.py  test_outcomes.py  test_prediction.py  test_retrieval_fusion.py  test_retrieval_v2.py  test_server.py  test_session_dedup.py  test_subatom.py  test_temporal.py  test_triples.py  test_two_tier.py  test_vector_index.py  test_world_model.py
saga/saga/: __init__.py  _llm.py  agents.py  annotate.py  api.py  calibration.py  config.py  consolidation.py  contradictions.py  core.py  decay.py  embeddings.py  forgetting.py  init_db.py  metrics.py  migrate.py  prediction.py  remember.py  retrieval_fusion.py  retrieval_v2.py  server.py  session_dedup.py  subatom.py  temporal.py  triples.py  vector_index.py
saga/saga/benchmarks/: benchmark.py  ground_truth.json  results.json  run.py  synthetic_dataset.py
saga/saga/benchmarks/longmemeval/: README.md  __init__.py  config.py  env_loader.py  ingest.py  msam_bench_p38.toml  msam_bench_p39.toml  msam_bench_p41_only.toml  msam_bench_p43.toml  msam_bench_p43_p41.toml  p33_threshold_analysis.py  p34_threshold_analysis.py  probe_preference.py  run_eval.py  saga_bench.toml  saga_bench_p34.toml  saga_bench_p36.toml  saga_bench_p38.toml  saga_bench_p39.toml  saga_bench_p41_only.toml  saga_bench_p43.toml  saga_bench_p43_p41.toml
saga/saga/examples/: agent_integration.py  quickstart.py  synthetic_dataset.py
saga/saga/scripts/: msam  msam-backup  msam-remember  saga-backup  saga-remember
saga/saga/tests/: conftest.py  test_agents.py  test_annotate.py  test_apply_confidence_gating.py  test_async_pool.py  test_calibration.py  test_cherry_picks.py  test_cli.py  test_cli_commands.py  test_config.py  test_consolidation.py  test_contradictions.py  test_core.py  test_core_functions.py  test_decay.py  test_embeddings.py  test_forgetting.py  test_get_db_pool.py  test_llm.py  test_metrics.py  test_observations.py  test_outcomes.py  test_p42_triples_response.py  test_p47_consolidation_v2.py  test_p48_canonical_vocab.py  test_prediction.py  test_retrieval_fusion.py  test_retrieval_v2.py  test_server.py  test_session_dedup.py  test_subatom.py  test_temporal.py  test_transactional.py  test_triples.py  test_two_tier.py  test_vector_index.py  test_world_model.py
scripts/: cleanup_merged_branches.py  codex_plus_smoke_probe.py  generate_agent_character.py  probe_chainlink_locks.py  worklink_docker_sibling_smoke.py
tests/: _fake_msam.py  _fake_saga.py  _mcp_dispatch.py  conftest.py  test_access_control.py  test_activity_panel.py  test_admin_users.py  test_agent.py  test_agent_commitments_block.py  test_agent_msam.py  test_agent_outbound.py  test_agent_saga.py  test_agent_sdk_client.py  test_agent_sdk_pool.py  test_agent_shell_jobs.py  test_agent_subagents.py  test_agent_system_prompt_refresh.py  test_agent_usage_block.py  test_applied_audit.py  test_atomic.py  test_background_tasks.py  test_bench_runner.py  test_bench_via_mimir.py  test_billing.py  test_bridge_attachments.py  test_bridge_directives.py  test_bridge_emoji.py  test_bridge_supervisor.py  test_bridges_seen_ids.py  test_budget.py  test_budget_gate_and_alias.py  test_chainlink_bootstrap.py  test_channel_id_contextvar.py  test_cli.py  (+259 more)
(+516 files in other folders)
