[project]
name = "mimir"
version = "0.1.0"
description = "Memory-centric agent harness on deepagents / LangGraph"
requires-python = ">=3.11"
authors = [{ name = "Jason Carreira" }]
license = { text = "MIT" }

dependencies = [
    # Core: agent loop + memory backend.
    # claude-agent-sdk was removed post-cutover (2026-05-14); the agent
    # loop now runs through deepagents (LangGraph). Model adapters are
    # optional extras — see [project.optional-dependencies] below.
    "aiohttp>=3.12",
    "apscheduler>=3.11",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastembed>=0.4",
    # saga is the in-process memory backend. Workspace member;
    # editable-installed via [tool.uv.sources] below. Will fold into
    # ``mimir.memory`` on the rename pass; flag is the
    # MIMIR_LEGACY_INPROCESS_SAGA escape hatch (also retiring then).
    "saga",
    "deepagents>=0.6.1",
    "langchain>=1.3",
    "requests>=2.33.1",
]

[project.optional-dependencies]
# Model-provider extras — install the one(s) you'll actually use.
# Agent.resolve_model dispatches on the ``MIMIR_MODEL_SPEC`` prefix
# (``claude-code:``, ``anthropic:``, ``openai:`` etc.) and lazy-imports
# the matching package, so installing only one keeps the dep graph
# small. Pick at least one or the agent can't build a model.
claude-code = [
    "langchain-claude-code @ git+https://github.com/jasoncarreira/langchain-claude-code@f7af15b613d1e016437740f739321316730cdd39",
]
anthropic = [
    "langchain-anthropic>=1.4",
]
openai = [
    "langchain-openai>=1.2.1",
]
# Codex Plus is a different protocol than the public OpenAI API
# (``chatgpt.com/backend-api/codex/responses`` OAuth-backed SSE, not
# ``api.openai.com/v1/responses``). The chat model lives in its own
# package and ships an own rate-limit-headers integration that wires
# directly into ``OpenAIQuotaProvider`` via the agent's callback hook.
codex-plus = [
    "langchain-codex-plus>=0.0.1,<0.1",
]
# Bridge extras — install if you want that bridge.
discord = [
    "discord-py>=2.6",
]
slack = [
    "slack-bolt>=1.18",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.0",
    "discord-py>=2.6",
    "slack-bolt>=1.18",
    # Tests touch all four model adapters at the import level.
    "langchain-claude-code @ git+https://github.com/jasoncarreira/langchain-claude-code@f7af15b613d1e016437740f739321316730cdd39",
    "langchain-anthropic>=1.4",
    "langchain-openai>=1.2.1",
    "langchain-codex-plus>=0.0.1,<0.1",
    # mimir.saga.vector_index uses FAISS for ANN search; without it
    # the index degrades to an empty-result stub and tests asserting
    # on indexed-atom counts (test_saga_correctness_regressions,
    # test_memory_production_surface) fail. Hard dep at the package
    # level is debatable (some operators may want BM25-only); pinning
    # in dev means tests always exercise the real path.
    "faiss-cpu>=1.13",
]

[project.scripts]
mimir = "mimir.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Permit ``pkg @ git+https://...`` direct references in
# project.optional-dependencies. We pin ``langchain-claude-code`` to
# our fork SHA while upstream PRs (#2, #4, #6) land; once those merge
# we can revert to the registry version and drop this flag.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mimir"]

[tool.hatch.build]
include = [
    "mimir/**/*.py",
    "mimir/prompts/**/*.md",
    "mimir/skills/**/*.md",
    "mimir/skills/**/*.json",
    "mimir/skills/**/*.py",
    "mimir/templates/**/*",
    "mimir/turn_viewer.html",
]
# Belt-and-suspenders: nothing under ``deepagent_poc/`` (deleted in
# the cutover, but the exclude prevents accidental re-add from sneaking
# into a wheel), no smoke-artifact SQLite dumps, no transient bench logs.
exclude = [
    "mimir/deepagent_poc/**",
    "mimir/**/_smoke_*",
    "mimir/**/_bench_*.log",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# v0.5: workspace setup. Mimir's pyproject is also the workspace root;
# saga/ is the second member (imported via filter-repo from msam2 — see
# V0.5.md §1). The package inside saga/ is still named ``msam`` at this
# commit; renamed to ``saga`` in V0.5.md §6.
[tool.uv.workspace]
members = ["saga"]

# Resolve the ``saga`` dependency declared in [project.dependencies]
# from the workspace member rather than PyPI. uv installs it editable so
# saga.core / saga.benchmarks are importable from anywhere in the workspace.
[tool.uv.sources]
saga = { workspace = true }

[dependency-groups]
# uv-native dependency group (PEP 735). Mirrors
# ``[project.optional-dependencies].dev`` so ``uv sync`` and
# ``pip install -e ".[dev]"`` both pull the same test toolchain
# plus all four model adapters (tests import each at module level)
# and faiss-cpu (vector_index tests need a real index).
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.0",
    "discord-py>=2.6",
    "slack-bolt>=1.18",
    "langchain-claude-code @ git+https://github.com/jasoncarreira/langchain-claude-code@f7af15b613d1e016437740f739321316730cdd39",
    "langchain-anthropic>=1.4",
    "langchain-openai>=1.2.1",
    "langchain-codex-plus>=0.0.1,<0.1",
    "faiss-cpu>=1.13",
]
