[project]
# PyPI distribution name. The bare ``mimir`` name is taken by an
# unrelated Twisted-protocol project (Ralph Meijer's "Mimir daemons"),
# so the open-source release uses ``mimir-agent``. The Python import
# name stays ``mimir`` (the package directory under ``mimir/``), so
# code keeps writing ``from mimir.agent import ...`` — only the
# install incantation changes: ``pip install mimir-agent``.
name = "mimir-agent"
version = "0.6.7"
description = "Memory-centric agent harness on deepagents / LangGraph"
requires-python = ">=3.11"
authors = [{ name = "Jason Carreira" }]
license = { text = "MIT" }

dependencies = [
    # Core: agent loop + memory backend.
    # claude-agent-sdk was removed post-cutover (2026-05-14); the agent
    # loop now runs through deepagents (LangGraph). Model adapters are
    # optional extras — see [project.optional-dependencies] below.
    #
    # The runtime memory backend lives at ``mimir/saga/`` (inside this
    # package) — it ships with the wheel and needs no external dep.
    # The ``saga`` workspace package at ``benchmarks/saga/`` is the
    # bench harness shell only; needed by ``benchmarks/longmemeval_via_*/``
    # not by the runtime. See the ``[bench]`` optional extra below.
    "aiohttp>=3.12",
    "apscheduler>=3.11",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastembed>=0.4",
    "deepagents>=0.6.1",
    "langchain>=1.3",
    "requests>=2.33.1",
]

[project.optional-dependencies]
# Model-provider extras — install the one(s) you'll actually use.
# Agent.resolve_model dispatches on the ``MIMIR_MODEL_SPEC`` prefix
# (``claude-code:``, ``anthropic:``, ``openai:`` etc.) and lazy-imports
# the matching package, so installing only one keeps the dep graph
# small. Pick at least one or the agent can't build a model.
# NOTE on Claude Code support: ``langchain-claude-code`` is required
# to route the agent loop through the Claude Code CLI subprocess
# (Max-plan friendly). We pin a private fork at a specific SHA because
# the upstream patches (#2/#4/#6) haven't merged yet.
#
# PyPI rejects published packages that declare direct URL (git+)
# dependencies — even gated behind an optional extra. So mimir-agent
# CANNOT declare a ``[claude-code]`` extra here without breaking
# publishing. Operators who want Claude Max support install the
# fork separately AFTER mimir-agent:
#
#   pip install mimir-agent[anthropic]
#   pip install "langchain-claude-code @ git+https://github.com/jasoncarreira/langchain-claude-code@c03f075c8b84fb0c718de1aabdd6493f5d191786"
#
# When upstream merges + cuts a release, this becomes a normal
# registry dep and we can move it back into an extra. Tracking:
# chainlink #268. The Dockerfile mirrors this — operators selecting
# the Claude Code path do an extra ``pip install`` step in the
# build (see Dockerfile comment block).
anthropic = [
    "langchain-anthropic>=1.4",
]
openai = [
    "langchain-openai>=1.2.1",
]
# Codex Plus is a different protocol than the public OpenAI API
# (``chatgpt.com/backend-api/codex/responses`` OAuth-backed SSE, not
# ``api.openai.com/v1/responses``). The chat model lives in its own
# package and ships an own rate-limit-headers integration that wires
# directly into ``OpenAIQuotaProvider`` via the agent's callback hook.
codex-plus = [
    "langchain-codex-plus>=0.0.5,<0.1",
]
# Model Context Protocol — required if any ``MIMIR_MCP_SERVERS_*`` env
# var is set. Pre-OSS hardening (review item #4 follow-on): this used
# to come along transitively via ``langchain-claude-code``, but with
# the fork now opt-in, MCP needs its own explicit extra so operators
# who want MCP know to install it.
mcp = [
    "mcp>=1.27",
]
# LongMemEval bench harness — pulls the workspace ``saga`` package
# (the bench shell, not the runtime memory backend). Only meaningful
# when running ``benchmarks/longmemeval_via_*/`` from a workspace
# checkout; ``saga`` is not published to PyPI separately, so this
# extra resolves only against the workspace via ``[tool.uv.sources]``.
# ``pip install mimir-agent[bench]`` from a fresh PyPI install will
# fail to resolve ``saga`` and is not the intended path.
bench = [
    "saga",
]
# Bridge extras — install if you want that bridge.
discord = [
    "discord-py>=2.6",
]
slack = [
    "slack-bolt>=1.18",
]
# GEPA prompt-optimization skill (chainlink #332 / #405). Opt-in: the
# standalone reflective-prompt optimizer (github.com/gepa-ai/gepa) is
# only needed while a GEPA pilot runs, so it ships as an extra rather
# than a core dep — the base runtime stays lean. gepa's core is
# dependency-free; mimir routes its ``reflection_lm`` through the
# already-configured ChatModel (see ``mimir/gepa_support.py``), so no
# ``gepa[full]`` / LiteLLM extra is needed. Install:
#   pip install 'mimir-agent[gepa]'        (pypi mode)
#   uv sync --extra gepa                   (workspace mode)
# A dockerfile.fragment can't carry it: fragments run as root before
# the user venv exists, so a pip-install there lands in system Python,
# not where the agent imports from — hence an extra, not a fragment.
gepa = [
    "gepa>=0.1.1,<0.2",
]
# ``pip install -e ".[dev]"`` — minimal dev toolchain. Does NOT pull
# the langchain-claude-code git fork; that path is in
# ``dev-claude-code`` below. Tests that touch the claude-code module
# skip via ``pytest.importorskip("langchain_claude_code")`` when the
# extra isn't installed.
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.0",
    "discord-py>=2.6",
    "slack-bolt>=1.18",
    "langchain-anthropic>=1.4",
    "langchain-openai>=1.2.1",
    "langchain-codex-plus>=0.0.5,<0.1",
    "mcp>=1.27",
    # mimir.saga.vector_index uses FAISS for ANN search; without it
    # the index degrades to an empty-result stub and tests asserting
    # on indexed-atom counts (test_saga_correctness_regressions,
    # test_memory_production_surface) fail. Hard dep at the package
    # level is debatable (some operators may want BM25-only); pinning
    # in dev means tests always exercise the real path.
    "faiss-cpu>=1.13",
    # gepa optimizer (chainlink #405) — dependency-free core. Included
    # in dev so CI exercises the reflection_lm wiring against the real
    # library; tests still ``importorskip`` it so a non-dev env stays green.
    "gepa>=0.1.1,<0.2",
    "botocore>=1.35",
]

# For dev work on the Claude Code subprocess path, install ``[dev]``
# then add the fork from git:
#
#   uv sync --extra dev
#   uv pip install "langchain-claude-code @ git+https://github.com/jasoncarreira/langchain-claude-code@c03f075c8b84fb0c718de1aabdd6493f5d191786"
#
# The ``[dev-claude-code]`` extra is gone for the same reason
# ``[claude-code]`` is gone — PyPI direct-URL rejection. Tests that
# touch ``langchain_claude_code`` use ``pytest.importorskip`` so they
# skip cleanly when the fork isn't installed.

[project.scripts]
mimir = "mimir.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# No ``allow-direct-references`` here. The previous ``[claude-code]``
# optional extra used a ``git+https://…`` direct reference, but PyPI
# rejects published packages that declare ANY direct URL dep — even
# behind an extra. The fork install moved to a documented separate
# step (see pyproject.toml's claude-code NOTE block, the Dockerfile's
# claude-code comment, and README's auth section). When upstream
# merges + publishes a release this flag can be reinstated alongside
# a registry-style claude-code extra.

[tool.hatch.build.targets.wheel]
packages = ["mimir"]

[tool.hatch.build]
# The built React app (mimir/react_app/dist/) is a VCS-IGNORED build artifact:
# frontend bundles are gitignored, only mimir/react_app/.gitkeep is tracked.
# hatchling's `include` is intersected with VCS-tracked files, so an `include`
# glob alone matches nothing for the dist and silently drops it from the wheel
# — which is exactly why 0.6.0 shipped with no `mimir/react_app/` at all and
# `/app/` returned "React app build not found" on a fresh `pip install`.
# `artifacts` is hatchling's escape hatch for force-including VCS-ignored paths.
# The dist must EXIST at build time, so CI (publish.yml) runs `npm ci` +
# `npm run build` before `uv build`, and asserts the wheel contains it.
artifacts = [
    "mimir/react_app/dist/**/*",
]
# chainlink #290: everything below the .py line is a runtime data file
# read by the INSTALLED package — it MUST ship in the wheel. This include
# list is an allowlist intersected with VCS-tracked files, so anything not
# matched here silently drops from the wheel (which is exactly how the
# bugs noted below shipped in 0.2.0/0.2.1, breaking fresh `pip install`s).
include = [
    "mimir/**/*.py",
    # Default operator prompt templates — seed_prompts() copies these into
    # <home>/prompts/ on setup. The directory is prompt_templates/, NOT
    # prompts/; the previous "mimir/prompts/**/*.md" glob was a dead path,
    # so none of the templates ever shipped.
    "mimir/prompt_templates/**/*.md",
    # Default core-memory templates — seed_core_memory() copies these into
    # <home>/memory/core/ on setup. Keep them as bundled files so package
    # upgrades can git-merge prompt/default-memory changes uniformly.
    "mimir/memory_templates/**/*.md",
    # Default scheduler (seed_scheduler copies this to <home>/scheduler.yaml)
    # and the mimir-core credential manifest (cred_verify loads it at import
    # via _PACKAGE_MANIFEST). No glob covered top-level mimir/*.yaml before.
    "mimir/scheduler_template.yaml",
    "mimir/credentials.yaml",
    # Saga DB schema — SagaStore executescript()s this on fresh-DB init
    # (saga/client.py, under "if fresh:"). Without it a first-run install
    # crashes with FileNotFoundError before saga can come up.
    "mimir/saga/*.sql",
    # Skills bundle arbitrary support files next to their .md/.py — shell
    # scripts (tmux), scaffold fragments (chainlink), etc. Glob the whole
    # subtree so a new support-file type can't silently drop (the old
    # .md/.json/.py allowlist dropped tmux's .sh and chainlink's .fragment).
    # .pyc / __pycache__ stay out — gitignored, and hatchling respects VCS.
    "mimir/skills/**/*",
    # Opt-in poller / integration skills (chainlink #299). Moved under the
    # package so `mimir skills install` works on pip installs, not just
    # source trees. Ships SKILL.md + poller.py + pollers.json + tests.
    "mimir/optional-skills/**/*",
    "mimir/templates/**/*",
    "mimir/react_app/dist/**/*",
    "mimir/turn_viewer.html",
    # chainlink #243: operator dashboards. HTML/JS lives in sibling .html
    # files next to the dashboard module; loaders read them at runtime.
    "mimir/ops_dashboard.html",
    "mimir/saga_dashboard.html",
    "mimir/file_memory_dashboard.html",
]
# Belt-and-suspenders: nothing under ``deepagent_poc/`` (deleted in
# the cutover, but the exclude prevents accidental re-add from sneaking
# into a wheel), no smoke-artifact SQLite dumps, no transient bench logs.
exclude = [
    "mimir/deepagent_poc/**",
    "mimir/**/_smoke_*",
    "mimir/**/_bench_*.log",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Workspace setup: mimir's pyproject is also the workspace root;
# benchmarks/saga/ is the second member (the LongMemEval bench shell
# — not the runtime memory backend, which lives at mimir/saga/).
[tool.uv.workspace]
members = ["benchmarks/saga"]

# Resolve the ``saga`` dependency declared in [project.dependencies]
# from the workspace member rather than PyPI. uv installs it editable so
# saga.core / saga.benchmarks are importable from anywhere in the workspace.
[tool.uv.sources]
saga = { workspace = true }

[dependency-groups]
# uv-native dependency group (PEP 735). Mirrors
# ``[project.optional-dependencies].dev`` so ``uv sync`` and
# ``pip install -e ".[dev]"`` both pull the same test toolchain.
# langchain-claude-code is OUT — it's behind the ``dev-claude-code``
# extra (see pre-OSS hardening, review item #4). Tests that touch
# the fork skip via ``pytest.importorskip``.
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-aiohttp>=1.0",
    "discord-py>=2.6",
    "slack-bolt>=1.18",
    "langchain-anthropic>=1.4",
    "langchain-openai>=1.2.1",
    "langchain-codex-plus>=0.0.5,<0.1",
    "mcp>=1.27",
    "faiss-cpu>=1.13",
    "botocore>=1.35",
]
